--- a/app/src/main/res/layout/item_chooose_address.xml
+++ b/app/src/main/res/layout/item_chooose_address.xml
@@ -6,6 +6,14 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/icon_bianji"/>
+
     <TextView
         android:id="@+id/tv_address"
         android:layout_width="wrap_content"
@@ -49,13 +57,7 @@
         android:layout_marginTop="5dp"
         android:text="夏雨天(女士)13708263728"/>
 
-    <ImageView
-        android:id="@+id/imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/icon_link"/>
+
 
     <View
         android:layout_width="match_parent"
