--- a/app/src/main/res/layout/item_choose_city.xml
+++ b/app/src/main/res/layout/item_choose_city.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_city"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="33dp"
-        android:background="@drawable/bg_round5dp_grey"
+        android:background="@drawable/bg_round2dp_selector"
         android:textSize="14sp"
         android:gravity="center"
         android:textColor="@color/color_282525"
         android:text="上海市"/>
+
 </FrameLayout>
