--- a/app/src/main/res/layout/activity_new_address.xml
+++ b/app/src/main/res/layout/activity_new_address.xml
@@ -157,7 +157,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line3" />
 
-    <EditText
+    <TextView
         android:background="@null"
         android:id="@+id/tv_dizhi_text"
         android:layout_width="0dp"
@@ -168,9 +168,19 @@
         android:textColor="@color/color_3B3838"
         android:textColorHint="@color/color_7C7877"
         android:textSize="13sp"
-        app:layout_constraintRight_toRightOf="@+id/tv_name"
+        app:layout_constraintRight_toLeftOf="@+id/iv_dizhi_to"
         app:layout_constraintLeft_toLeftOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/line3" />
+
+    <ImageView
+        android:id="@+id/iv_dizhi_to"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:src="@drawable/icon_link"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_dizhi"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_dizhi"/>
 
     <View
         android:id="@+id/line4"
@@ -182,7 +192,7 @@
         android:background="@color/color_F5F5F5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_dizhi" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_dizhi_text" />
 
 
     <TextView
@@ -222,7 +232,7 @@
         android:background="@color/color_F5F5F5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_menpai" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_menpai_text" />
 
 
     <TextView
