企业订餐提交相关逻辑及接口写入

--- a/app/src/main/res/layout/activity_company_ordering.xml
+++ b/app/src/main/res/layout/activity_company_ordering.xml
@@ -174,6 +174,7 @@
                 android:background="@color/transparent"
                 android:hint="请填写员工人数"
                 android:lines="1"
+                android:inputType="number"
                 android:textColor="@color/color_3B3838"
                 android:textColorHint="@color/color_7C7877"
                 android:textSize="13sp"
@@ -289,7 +290,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
-                android:text="联系人"
+                android:text="联系电话"
                 android:textColor="@color/color_282525"
                 android:textSize="13sp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -300,7 +301,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
-                android:hint="请填写联系人姓名"
+                android:hint="请填写联系号码"
                 android:lines="1"
                 android:textColor="@color/color_3B3838"
                 android:textColorHint="@color/color_7C7877"
