--- a/app/src/main/res/layout/activity_new_address.xml
+++ b/app/src/main/res/layout/activity_new_address.xml
@@ -167,20 +167,14 @@
         android:text=""
         android:textColor="@color/color_3B3838"
         android:textColorHint="@color/color_7C7877"
+        android:drawableEnd="@drawable/icon_link"
+        android:paddingRight="10dp"
         android:textSize="13sp"
-        app:layout_constraintRight_toLeftOf="@+id/iv_dizhi_to"
+        app:layout_constraintRight_toRightOf="@+id/tv_name"
         app:layout_constraintLeft_toLeftOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/line3" />
 
-    <ImageView
-        android:id="@+id/iv_dizhi_to"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:src="@drawable/icon_link"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_dizhi"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_dizhi"/>
+
 
     <View
         android:id="@+id/line4"
