--- a/app/src/main/res/layout/foot_orderdetail.xml
+++ b/app/src/main/res/layout/foot_orderdetail.xml
@@ -6,10 +6,6 @@
     android:layout_height="wrap_content">
 
 
-    <include layout="@layout/item_order_feiyong"
-        />
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +48,7 @@
             android:layout_marginTop="14dp"
             android:textSize="15sp"
             android:textColor="@color/color_282525"
-            android:text="配送信息"/>
+            android:text="送达时间"/>
 
         <TextView
             android:id="@+id/tv_time_des"
@@ -305,7 +301,9 @@
 
         <TextView
             android:id="@+id/tv_pay_time_des"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:gravity="right"
+            app:layout_constraintLeft_toRightOf="@+id/tv_pay_time"
             android:layout_height="wrap_content"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line33"
@@ -336,7 +334,9 @@
 
         <TextView
             android:id="@+id/tv_beizhu_des"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:gravity="right"
+            app:layout_constraintLeft_toRightOf="@+id/tv_beizhu"
             android:layout_height="wrap_content"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line44"
