重置密码接口及逻辑写入

--- a/app/src/main/res/layout/activity_setpassword.xml
+++ b/app/src/main/res/layout/activity_setpassword.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="10dp"
         android:textColor="@color/color_282626"
         android:textSize="25sp"
-        android:text="136****1212"/>
+        android:text=""/>
 
 
 
