--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -234,5 +234,6 @@
         android:background="@drawable/btn_gradient_red_round"
         android:textSize="17sp"
         android:textColor="@color/white"
-        android:text="退出登录"/>
+        android:text="退出登录"
+        android:visibility="gone"/>
 </RelativeLayout>
