登录密码设置显示调整

--- a/app/src/main/res/layout/activity_acountsafe.xml
+++ b/app/src/main/res/layout/activity_acountsafe.xml
@@ -75,7 +75,7 @@
             android:textSize="14sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_mimalogin"
-            android:text="未设置"/>
+            android:text="@string/tv_login_pass_set"/>
 
 
         <View
