--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -116,6 +116,7 @@
                     android:numColumns="3"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:layout_marginBottom="6dp"
                     android:verticalSpacing="2dp"
                     android:visibility="gone"
                     />
