--- a/crecyclerview/src/main/res/layout/crecyclerview_empty.xml
+++ b/crecyclerview/src/main/res/layout/crecyclerview_empty.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:background="@color/white">
 
+    <ImageView
+        android:id="@+id/iv_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.3"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/img_jiaoyijilu"/>
     <TextView
         android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawablePadding="25dp"
-        android:drawableTop="@drawable/img_jiaoyijilu"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_empty"
         android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:lineSpacingExtra="3dp"
         android:text="暂无记录"
         android:textColor="@color/text_333"
         android:textSize="14sp" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
