--- a/app/src/main/res/layout/activity_setpaypassword.xml
+++ b/app/src/main/res/layout/activity_setpaypassword.xml
@@ -43,10 +43,22 @@
         android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="我们已经发送了校验码到您的手机"
+        android:text="请输入6位数字密码"
         android:textColor="@color/color_7C7877"
         android:textSize="12sp" />
-
+    <TextView
+        android:id="@+id/tv_agree"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/tv_setpaypassword_code"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="140dp"
+        android:text="确认"
+        android:gravity="center"
+        android:background="@drawable/btn_gradient_yellow_round"
+        android:textColor="@color/white"
+        android:textSize="17sp"/>
 
 
     <com.bee.user.widget.PayPassView
