--- a/app/src/main/res/layout/activity_trade_list.xml
+++ b/app/src/main/res/layout/activity_trade_list.xml
@@ -47,6 +47,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="10dp"
         android:ellipsize="end"
+        android:visibility="gone"
         android:gravity="center"
         android:text="筛选"
         android:textColor="@color/color_282626"
@@ -57,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_title"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
