--- a/app/src/main/res/layout/item_trade_list.xml
+++ b/app/src/main/res/layout/item_trade_list.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="14dp"
         android:textStyle="bold"
         android:layout_toRightOf="@+id/icon_type"
-        android:text="本息赎回"
+        android:text=""
         android:textColor="@color/color_282525"
         android:textSize="15sp" />
 
