--- a/app/src/main/res/anim/push_in.xml
+++ b/app/src/main/res/anim/push_in.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<scale xmlns:android="http://schemas.android.com/apk/res/android"
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-    android:fromXScale="1.0"
-    android:toXScale="1.0"
-    android:fromYScale="0"
-    android:toYScale="1.0"
+    android:fromYDelta="-100%"
+    android:toYDelta="0%"
     android:duration="200" />
 
