--- a/app/src/main/res/layout/activity_trade_detail.xml
+++ b/app/src/main/res/layout/activity_trade_detail.xml
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="+100"
+        android:text=""
         android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:textColor="@color/color_282626"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="交易成功"
+        android:text=""
         android:textColor="@color/color_7C7877"
         android:textSize="14sp"
         android:layout_marginTop="15dp"
