交易记录开发

--- a/app/src/main/res/layout/activity_trade_list.xml
+++ b/app/src/main/res/layout/activity_trade_list.xml
@@ -66,8 +66,8 @@
         android:text="近一年交易记录"/>
 
 
-    <com.huaxiafinance.www.crecyclerview.crecyclerView.CRecyclerView
-        android:id="@+id/crecyclerview"
+
+    <include layout="@layout/crecyclerview_base"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_time"
         app:layout_constraintBottom_toBottomOf="parent"
