--- a/app/src/main/res/layout/popop_window_trade_list.xml
+++ b/app/src/main/res/layout/popop_window_trade_list.xml
@@ -79,7 +79,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_left"
+            android:id="@+id/tv_time_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
@@ -96,7 +96,7 @@
             android:text=" —— "/>
 
         <TextView
-            android:id="@+id/tv_right"
+            android:id="@+id/tv_time_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
