--- a/app/src/main/res/layout/item_order2.xml
+++ b/app/src/main/res/layout/item_order2.xml
@@ -57,18 +57,25 @@
         <com.amap.api.maps.TextureMapView
             android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="145dp"
             android:gravity="center"
             tools:text="item"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view10dp">
         </com.amap.api.maps.TextureMapView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:background="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/map"/>
         <TextView
             android:id="@+id/tv_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_282525"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintRight_toRightOf="parent"
@@ -93,7 +100,6 @@
             app:layout_constraintTop_toBottomOf="@+id/map"
             app:layout_constraintRight_toLeftOf="@+id/tv_money"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
