首页UI及订单列表UI及为你推荐添加

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,6 +62,7 @@
     <color name="grey_default">#f2f2fc</color>
     <color name="text_000">#000000</color>
     <color name="line_d">#dddddd</color>
+    <color name="color_7c7877">#FF7C7877</color>
 
 
 </resources>
