--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -111,7 +111,7 @@
             android:id="@+id/tv_mili"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text=""
             android:textColor="@color/color_282626"
             android:textSize="15sp"/>
     </LinearLayout>
