--- a/app/src/main/res/layout/head_ordering.xml
+++ b/app/src/main/res/layout/head_ordering.xml
@@ -72,6 +72,7 @@
         android:layout_height="44dp"
         android:background="@drawable/bg_round10dp_white"
         android:gravity="center_vertical"
+        android:visibility="gone"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:layout_marginLeft="10dp"
