--- a/app/src/main/res/layout/activity_dingwei2.xml
+++ b/app/src/main/res/layout/activity_dingwei2.xml
@@ -31,6 +31,7 @@
                 android:src="@drawable/icon_back_anse" />
 
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="44dp"
                 android:layout_centerHorizontal="true"
@@ -100,6 +101,7 @@
 
 
     <TextView
+        android:id="@+id/tv_other"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-25dp"
