注销账户UI及逻辑加入

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,6 +63,8 @@
     <color name="text_000">#000000</color>
     <color name="line_d">#dddddd</color>
     <color name="color_7c7877">#FF7C7877</color>
+    <color name="color_3b3838">#ff3b3838</color>
+    <color name="color_FF6200_8">#14FF6200</color>
 
 
 </resources>
