--- a/app/src/main/res/layout/dialog_set_end.xml
+++ b/app/src/main/res/layout/dialog_set_end.xml
@@ -38,8 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center"
-            android:text="确定"
-            android:textColor="@color/FF6200"
+            android:text="确认"
+            android:textColor="#FF3E7DFB"
             android:textSize="16sp" />
     </LinearLayout>
 </FrameLayout>
