--- a/app/src/main/res/layout/item_buy_peisong_card.xml
+++ b/app/src/main/res/layout/item_buy_peisong_card.xml
@@ -8,8 +8,7 @@
         android:id="@+id/iv_bg"
         android:layout_width="155dp"
         android:layout_height="230dp"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/bg_nian"/>
+        android:layout_marginRight="10dp"/>
 
     <LinearLayout
         android:id="@+id/ll_content"
