--- a/app/src/main/res/layout/item_coupon.xml
+++ b/app/src/main/res/layout/item_coupon.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -43,14 +44,19 @@
             android:textColor="@color/color_7C7877"
             android:text="满59元可用"/>
 
+        <View
+            android:id="@+id/view_line"
+            android:layout_width="1px"
+            android:layout_height="0dp"
+            android:layout_centerHorizontal="true"/>
 
         <TextView
             android:id="@+id/tv_des1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="84dp"
             android:layout_marginTop="20dp"
-            android:layout_toRightOf="@+id/tv_money_value"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/view_line"
             android:text="全场通用红包"
             android:textColor="@color/color_282525"
             android:textSize="16sp"
