--- a/app/src/main/res/layout/activity_buy_card.xml
+++ b/app/src/main/res/layout/activity_buy_card.xml
@@ -2,14 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <View
+        android:id="@+id/statusheight"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/title_bar_height"
-        android:background="@color/white"
+        android:layout_height="0dp"
+        android:background="#312d2c"
+        app:layout_constraintBottom_toTopOf="@+id/tv_bg"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:id="@+id/tv_bg"
+        android:layout_width="match_parent"
+        android:layout_height="165dp"
+        android:src="@drawable/bg_toubu"
+        android:scaleType="fitXY"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statusheight"/>
 
     <ImageButton
         android:id="@+id/iv_back"
@@ -18,9 +30,9 @@
         android:background="@color/transparent"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:src="@drawable/icon_back_anse"
+        android:src="@drawable/icon_back_bai"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/statusheight" />
 
     <TextView
         android:id="@+id/toolbar_title"
@@ -32,205 +44,115 @@
         android:gravity="center"
         android:maxLines="1"
         android:text="购买配送卡"
-        android:textColor="@color/color_282626"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-
+        app:layout_constraintTop_toBottomOf="@+id/statusheight" />
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg_peisongka"
-        android:scaleType="fitXY"
+        android:id="@+id/iv_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/icon_touxiang"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_title"/>
 
 
-    <androidx.core.widget.NestedScrollView
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@+id/iv_icon"
+        app:layout_constraintTop_toTopOf="@+id/iv_icon"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:text="11111"/>
+
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        android:layout_marginTop="2dp"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:text="开通配送卡，省钱以后花"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_title">
+        app:layout_constraintTop_toBottomOf="@+id/tv_bg"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="13dp">
+    <TextView
+        android:id="@+id/text_pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:textStyle="bold"
+        android:textSize="17sp"
+        android:textColor="@color/color_282525"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
+        android:text="支付方式"/>
 
-            <ImageView
-                android:id="@+id/iv_icon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="25dp"
-                android:src="@drawable/icon_touxiang"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+        android:id="@+id/iv_mili_pay"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/icon_mili"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_pay"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="米粒支付"
+        android:textSize="16sp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintTop_toTopOf="@+id/iv_mili_pay"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_mili_pay"
+        app:layout_constraintLeft_toRightOf="@+id/iv_mili_pay"
+        android:textColor="@color/color_1D1E2A"/>
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toRightOf="@+id/iv_icon"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="27dp"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:text="11111"/>
+    <TextView
+        android:id="@+id/tv_mili_keyong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="可用米粒 1000"
+        android:textSize="13sp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toTopOf="@+id/iv_mili_pay"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_mili_pay"
+        android:textColor="@color/FF6200"/>
 
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="@+id/tv_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title"
-                android:layout_marginTop="2dp"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:text="有效期至2020-12-31"/>
-
-
-            <LinearLayout
-                android:id="@+id/ll_card"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@drawable/bg_round10dp_white"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_icon">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerview"
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/color_3B3838"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="18dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="到期前自动扣费，可随时取消"/>
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:id="@+id/ll_pay_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_round10dp_white"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll_card"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/ll_zhifubao"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/iv_zhifubao"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/icon_zhifubao"/>
-
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:textColor="@color/color_282525"
-                        android:layout_marginLeft="14dp"
-                        android:text="支付宝"/>
-
-                    <ImageView
-                        android:id="@+id/checkbox_zhifubao"
-                        android:layout_width="17dp"
-                        android:layout_height="17dp"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/icon_gouxuan_gouwuche" />
-
-                </LinearLayout>
-                <View
-                    android:id="@+id/line"
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/color_eee"/>
-                <LinearLayout
-                    android:id="@+id/ll_weixin"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/iv_weixin"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/icon_weixin_pay"/>
-
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:textColor="@color/color_282525"
-                        android:layout_marginLeft="14dp"
-                        android:text="微信"/>
-
-                    <ImageView
-                        android:id="@+id/checkbox_weixin"
-                        android:layout_width="17dp"
-                        android:layout_height="17dp"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/icon_gouxuan_gouwuche" />
-
-                </LinearLayout>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_sure"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textSize="17sp"
-                android:textColor="@color/white"
-                android:gravity="center"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginTop="25dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll_pay_type"
-                android:background="@drawable/btn_gradient_grey_round"
-                android:text="确认支付"/>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+    <TextView
+        android:id="@+id/tv_sure"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:textSize="17sp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_mili_pay"
+        android:background="@drawable/btn_gradient_grey_round"
+        android:text="确认支付"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
