--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="color_000_c">#cc000000</color>
     <color name="color_000">#000000</color>
 
+    <color name="color_FF7066">#FF7066</color>
+
+
     <color name="color_282626">#282626</color>
     <color name="color_ccc">#CCCCCC</color>
     <color name="color_eee">#EEEEEE</color>
