--- a/app/src/main/res/layout/fragment_peisong_card.xml
+++ b/app/src/main/res/layout/fragment_peisong_card.xml
@@ -1,7 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <include layout="@layout/item_orderdetail_head_card"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:background="@drawable/bg_hongbao">
+
+
+        <ImageView
+            android:id="@+id/iv_icon_peisong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_peisong"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"/>
+
+
+        <TextView
+            android:id="@+id/tv_des1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="15dp"
+            android:layout_toRightOf="@+id/iv_icon_peisong"
+            android:text="配送卡未开通"
+            android:textColor="@color/color_282525"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_des2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tv_des1"
+            android:layout_below="@+id/tv_des1"
+            android:layout_marginTop="4dp"
+            android:textSize="12sp"
+            android:textColor="@color/color_7C7877"
+            android:text="开通配送卡，省钱以后花"/>
+
+        <TextView
+            android:id="@+id/tv_des3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tv_des2"
+            android:layout_below="@+id/tv_des2"
+            android:layout_marginTop="4dp"
+            android:textSize="12sp"
+            android:textColor="@color/color_FF564A"
+            android:visibility="gone"
+            android:text="剩余36天"/>
+
+        <TextView
+            android:id="@+id/tv_des4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_stroke_yellow"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:layout_marginBottom="20dp"
+            android:layout_alignLeft="@+id/tv_des2"
+            android:layout_below="@+id/tv_des3"
+            android:layout_marginTop="10dp"
+            android:textSize="12sp"
+            android:textColor="@color/FF6200"
+            android:text="我要续费"/>
+
+    </RelativeLayout>
+</FrameLayout>
