--- a/app/src/main/res/layout/item_home_3.xml
+++ b/app/src/main/res/layout/item_home_3.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <FrameLayout
@@ -20,16 +22,14 @@
             android:numColumns="2"/>
     </FrameLayout>
 
-
-
-    <ImageView
+    <com.bigkoo.convenientbanner.ConvenientBanner
+        android:id="@+id/banner3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="110dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="12dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/banner"/>
+        app:canLoop="true"/>
 
     <TextView
         android:layout_width="wrap_content"
