--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -68,6 +68,7 @@
     <color name="color_7c7877">#FF7C7877</color>
     <color name="color_3b3838">#ff3b3838</color>
     <color name="color_FF6200_8">#14FF6200</color>
+    <color name="color_2DD28A">#2DD28A</color>
 
 
 </resources>
