--- a/app/src/main/res/layout/activity_point_list.xml
+++ b/app/src/main/res/layout/activity_point_list.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <View
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bg_white_grey"
         android:background="@drawable/bg_gradient_white_grey" />
@@ -18,9 +16,7 @@
         android:background="@color/transparent"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:src="@drawable/icon_back_anse"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/icon_back_anse" />
 
     <TextView
         android:id="@+id/toolbar_title"
@@ -28,30 +24,42 @@
         android:layout_height="@dimen/title_bar_height"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:layout_centerHorizontal="true"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:text="积分明细"
         android:textColor="@color/color_282626"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
 
 
 
+    <!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swiperefresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="15dp">
 
-    <com.huaxiafinance.www.crecyclerview.crecyclerView.CRecyclerView
-        android:id="@+id/crecyclerview"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="15dp"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:cacheColorHint="@null"
+                android:scrollbars="none" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_title"
+        android:layout_marginTop="15dp"
+        android:cacheColorHint="@null"
+        android:scrollbars="none" />
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
