--- a/app/src/main/res/layout/item_order_comment_food.xml
+++ b/app/src/main/res/layout/item_order_comment_food.xml
@@ -21,6 +21,7 @@
         android:layout_weight="1" />
 
     <com.bee.user.widget.RadioGroupPlus
+        android:id="@+id/rgp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
