--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -39,7 +39,7 @@
         android:id="@+id/tv_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3公里"
+        android:text=""
         android:layout_marginTop="4dp"
         android:textSize="12sp"
         android:layout_marginLeft="10dp"
@@ -51,7 +51,7 @@
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="大约15分钟"
+        android:text=""
         android:layout_marginTop="4dp"
         android:textSize="12sp"
         android:layout_marginLeft="10dp"
@@ -62,7 +62,7 @@
         android:id="@+id/tv_sells"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="月销3699"
+        android:text=""
         android:layout_marginTop="4dp"
         android:textSize="12sp"
         android:layout_marginLeft="10dp"
