--- a/app/src/main/res/layout/activity_order_comment.xml
+++ b/app/src/main/res/layout/activity_order_comment.xml
@@ -121,6 +121,7 @@
                     android:layout_marginTop="30dp"
                     android:maxWidth="25dp"
                     android:maxHeight="25dp"
+                    android:stepSize="1"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/iv_pinfen"
@@ -146,6 +147,7 @@
                     android:layout_marginTop="10dp"
                     android:maxWidth="14dp"
                     android:maxHeight="14dp"
+                    android:stepSize="1"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ratin_text1"
@@ -182,6 +184,7 @@
                     android:layout_marginTop="6dp"
                     android:maxWidth="14dp"
                     android:maxHeight="14dp"
+                    android:stepSize="1"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ratin2"
