首页 ， 购物车

--- a/app/src/main/res/layout/item_chart_food.xml
+++ b/app/src/main/res/layout/item_chart_food.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <CheckBox
-        android:id="@+id/cb_1"
+        android:id="@+id/cb_1_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
