--- a/app/src/main/res/layout/item_home_3.xml
+++ b/app/src/main/res/layout/item_home_3.xml
@@ -5,22 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <com.bee.user.widget.MyGridView
+        android:id="@+id/gridview"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/bg_round10dp_white">
-
-        <com.bee.user.widget.MyGridView
-            android:id="@+id/gridview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:cacheColorHint="@color/white"
-            android:horizontalSpacing="1px"
-            android:verticalSpacing="1px"
-            android:scrollbars="none"
-            android:numColumns="2"/>
-    </FrameLayout>
+        android:horizontalSpacing="1px"
+        android:verticalSpacing="1px"
+        android:background="@drawable/bg_round10dp_white"
+        android:scrollbars="none"
+        android:numColumns="2"/>
 
     <com.bigkoo.convenientbanner.ConvenientBanner
         android:id="@+id/banner3"
@@ -37,6 +31,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
         android:text="为你推荐"
+        android:textStyle="bold"
         android:textColor="@color/color_282525"
         android:textSize="16sp"
         android:gravity="center"
