--- a/app/src/main/res/layout/item_home_gridview2.xml
+++ b/app/src/main/res/layout/item_home_gridview2.xml
@@ -42,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="椒麻口水鸡"
+        android:textStyle="bold"
         android:layout_below="@+id/tv_image"
         android:layout_marginTop="5dp"
         android:textSize="12sp"
@@ -55,7 +56,7 @@
         android:text="限时秒杀"
         android:layout_below="@+id/tv_name"
         android:layout_marginTop="5dp"
-        android:textSize="12sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:textColor="@color/color_FF5050"/>
 
