商品详情页

--- a/app/src/main/res/drawable/btn_stroke_yellow.xml
+++ b/app/src/main/res/drawable/btn_stroke_yellow.xml
@@ -6,6 +6,7 @@
 
     <corners android:radius="100dp" />
 
+    <solid android:color="@color/white"/>
     <stroke android:color="@color/color_FF6100"
         android:width="1px"/>
 </shape>
