--- a/app/src/main/res/layout/activity_food_by_type.xml
+++ b/app/src/main/res/layout/activity_food_by_type.xml
@@ -20,15 +20,21 @@
             android:minHeight="45dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/iv_banner"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="55dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/banner" />
+                android:background="@drawable/bg_round10dp_white">
+
+                <com.bee.user.widget.HorizontalRecyclerView
+                    android:id="@+id/rv_top_tabs"
+                    android:overScrollMode="never"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </FrameLayout>
 
 
 
@@ -170,7 +176,6 @@
         </com.bee.user.widget.RadioGroupPlus>
     </com.google.android.material.appbar.AppBarLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
@@ -178,5 +183,6 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
